src/test/ui/mismatched_types/trait-bounds-cant-coerce.stderr
error[E0308]: mismatched types
  --> $DIR/trait-bounds-cant-coerce.rs:13:7
   |
LL |     a(x);
   |       ^ expected trait `Foo + std::marker::Send`, found trait `Foo`
   |
   = note: expected type `std::boxed::Box<(dyn Foo + std::marker::Send + 'static)>`
              found type `std::boxed::Box<(dyn Foo + 'static)>`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0308`.
